# AgriFile

./: .gitignore  AgriFile.spec  Makefile  danhsachcanbo.txt  db.sqlite3  entrypoint.sh  manage.py  output.xlsx  pyproject.toml  readme.md  req.txt  run.bat
AgriFile/: asgi.py  mid.py  settings.py  urls.py  views.py  wsgi.py
baocao/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
baocao/migrations/: 0001_initial.py  0002_initial.py  0003_mediafile_filename_mediafile_filetype.py  0003_thongke.py  0004_alter_baocao_options.py
file/: models.py  urls.py  views.py
file/migrations/: 0001_initial.py
setmeup/: admin.py  apps.py  filter.py  models.py  urls.py  views.py
setmeup/forms/: lichbaocao.py  noinhan.py  thongke.py
setmeup/migrations/: 0001_initial.py  0002_alter_lichbaocao_options_lichbaocao_noidung.py  0002_initial.py  0002_lichbaocao_ref_alter_lichbaocao_kind_delete_loailich.py  0002_noinhan.py  0003_lichbaocao.py  0003_remove_lichbaocao_ref_lichbaocao_dinhky_and_more.py  0004_alter_lichbaocao_dinhky.py
static/css/: css.bak  custom.css  fontme.css
static/js/: lichbaocao.js
storage/: db.sqlite3
templates/adminlte/: base.html  datetimepicker.html  paging.html
templates/baocao/: admin_baocao_list.html  baocao_confirm_delete.html  create.html  create_by_nof.html  create_form.html  detail.html  list.html  quick_create.html  update.html
templates/lichbaocao/: create.html  list.html  notif.html  update.html
templates/noinhan/: create.html  delete.html  list.html  update.html
user/: forms.py  mock.py  models.py  urls.py  views.py
(+25 files in other folders)
