[tool.poetry]
name = "agrifile"
version = "0.1.0"
description = ""
authors = ["BBOYADAO <bboyadao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-adminlte-3 = "^0.1.6"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.2.1"
crispy-bootstrap5 = "^0.7"
django-filter = "^22.1"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
